Formulario mandar correo

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VITE_AUTH0_DOMAIN=dev-5x588u6dqgpsf3kr.eu.auth0.com
 VITE_AUTH0_CLIENT_ID=vju4RvuyRoR8GN1lm7MMdyraSNOKEWuu
+RESEND_API_KEY=re_7oWJcC3k_8eTK2dfEXF6bSLacQuR4U38M
