--- a/.env
+++ b/.env
@@ -1,3 +1,10 @@
 VITE_AUTH0_DOMAIN=dev-5x588u6dqgpsf3kr.eu.auth0.com
 VITE_AUTH0_CLIENT_ID=vju4RvuyRoR8GN1lm7MMdyraSNOKEWuu
 RESEND_API_KEY=re_7oWJcC3k_8eTK2dfEXF6bSLacQuR4U38M
+VITE_FIREBASE_API_KEY=AIzaSyCHi4CZPlof-F5CgQNn6h9z3SOOqfrc0O8
+VITE_FIREBASE_AUTH_DOMAIN=cvpalette.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=cvpalette
+VITE_FIREBASE_STORAGE_BUCKET=cvpalette.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=150449251542
+VITE_FIREBASE_APP_ID=1:150449251542:web:55e2cb9d9799fbae209577
+VITE_FIREBASE_MEASUREMENT_ID=G-LZ9P5ZJDNN
