--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "emailjs-com": "^3.2.0",
     "embla-carousel-react": "^8.3.0",
     "express": "^5.1.0",
+    "firebase": "^11.9.1",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
